--- a/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/package.json
+++ b/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-to-print": "^2.13.0",
