--- a/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/package.json
+++ b/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-to-print": "^2.13.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
